# credit-risk-pd-model

./: README.md  main.py  pyproject.toml
notebooks/: 01_exploratory_analysis.ipynb
notebooks/data/raw/: default_credit_card.csv
src/: data_ingestion.py
