[project]
name = "credit-risk-pd-model"
version = "0.1.0"
description = "Probability of Default model using UCI credit dataset"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
